Storageから持ってきて表示することに成功。ログインまわりに既知のバグアリ。

--- a/src/app/mainpage/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage/mainpage.component.html
@@ -1,2 +1,6 @@
-<p>mainpage works!</p>
-<div>{{angularFireAuth.auth.currentUser}}</div>
+<h1>ノート！！</h1>
+<!-- <div>{{cookieService.get("uid")}}</div> -->
+
+<li *ngFor="let item of image">
+  <img src={{item}}>
+</li>
