メインページとコンテンツページによる構成に変更

--- a/src/app/mainpage/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage/mainpage.component.html
@@ -1,6 +1,26 @@
-<h1>ノート！！</h1>
-<!-- <div>{{cookieService.get("uid")}}</div> -->
 
-<li *ngFor="let item of image">
-  <img src={{item}}>
-</li>
+<!-- 移した -->
+<div *ngIf="auth.user$ | async; then authenticated else guest">
+    <!-- template will replace this div -->
+  </div>
+
+  <!-- User NOT logged in -->
+  <ng-template #guest>
+    <h3>こんにちは！, ゲストさん</h3>
+    <p>続けるにはログインしてください</p>
+
+    <button class="btn btn-dark" (click)="auth.googleSignin()">
+      <i class="fa fa-google"></i> Googleアカウントでログイン
+    </button>
+
+  </ng-template>
+
+
+  <!-- User logged in -->
+  <ng-template #authenticated>
+    <div *ngIf="auth.user$ | async as user">
+      <h3>こんにちは！, {{ user.displayName }}さん</h3>
+      <button class="btn btn-dark" (click)="auth.signOut()">ログアウト</button>
+    </div>
+    <button class="btn btn-dark" (click)="toContentButton()">コンテンツページへ遷移</button>
+  </ng-template>
