--- a/src/app/content/content-page/content-page.component.html
+++ b/src/app/content/content-page/content-page.component.html
@@ -1,6 +1,8 @@
 <h1>ノート！！</h1>
 
-<div *ngFor="let item of image">
-  <img src={{item}}>
-</div>
-
+<ng-container #contetlist *ngFor="let item of trustPaths; let i=index">
+  <!-- <a [href]="item" target="_blank" download="note.pdf">ノートその{{i+1}}を保存する</a> -->
+  <object [data]=item type="application/pdf" width="100%" height="100%">
+    <p><b>こちらからダウンロードしてくだいさい。</b>: <a href="item.pdf">PDF をダウンロード</a>.</p>
+ </object>
+</ng-container>
