データベースから先生の名前と情報を持ってくることができた

--- a/src/app/mainpage/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage/mainpage.component.html
@@ -25,6 +25,6 @@
     <button class="btn btn-dark my-4" (click)="toContentButton()">コンテンツページへ遷移</button> -->
 
     <button class="btn btn-dark" (click)="toLectureList()">授業一覧</button>
-    <button class="btn btn-dark" (click)="toLectureList()">追加</button>
+    <button class="btn btn-dark" (click)="toTeacherList()">追加</button>
     <button class="btn btn-dark" (click)="auth.signOut()">ログアウト</button>
   </ng-template>
