--- a/src/app/teachers-page/teacher-list/teacher-list.component.html
+++ b/src/app/teachers-page/teacher-list/teacher-list.component.html
@@ -1,1 +1,7 @@
-<p>teacher-list works!</p>
+<ng-container *ngFor="let teacher$ of teacherService.teachers$ | async">
+  <div>
+    名前：{{teacher$.name}}
+    教科：{{teacher$.subject}}
+  </div>
+    <br>
+</ng-container>
