--- a/src/app/teachers-page/teacher-list/teacher-list.component.html
+++ b/src/app/teachers-page/teacher-list/teacher-list.component.html
@@ -2,6 +2,6 @@
   <div>
     名前：{{teacher$.name}}
     教科：{{teacher$.subject}}
+    <button class="btn btn-dark">登録</button>
   </div>
-    <br>
 </ng-container>
