--- a/src/app/add-lecture-page/add-lecture-list/add-lecture-list.component.html
+++ b/src/app/add-lecture-page/add-lecture-list/add-lecture-list.component.html
@@ -5,3 +5,7 @@
     <button class="btn btn-dark" (click)="onRegBtn(i)">登録</button>
   </div>
 </ng-container>
+
+<div>
+  <!-- test: {{(authService.user$ | async).lecture}} -->
+</div>
