--- a/src/app/mainpage/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage/mainpage.component.html
@@ -24,7 +24,7 @@
     </div>
     <button class="btn btn-dark my-4" (click)="toContentButton()">コンテンツページへ遷移</button> -->
 
-    <button class="btn btn-dark" (click)="toLectureList()">授業一覧</button>
+    <button class="btn btn-dark" (click)="toNote()">ノート表示</button>
     <button class="btn btn-dark" (click)="toAddLecture()">追加</button>
     <button class="btn btn-dark" (click)="auth.signOut()">ログアウト</button>
   </ng-template>
