メインページ遷移用のコンポーネント作る前段階

--- a/src/app/content/content-page/content-page.component.html
+++ b/src/app/content/content-page/content-page.component.html
@@ -8,3 +8,5 @@
     <a [href]=url target="_blank" class="btn btn-lg btn-dark mb-4" download="note.pdf">　ノートを保存する　</a>
   </ng-template>
 </ng-container>
+<button class="btn btn-dark btn-lg m-4" (click)="redirectMain()">メインページに戻る</button>
+
