--- a/src/app/mainpage/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage/mainpage.component.html
@@ -7,7 +7,7 @@
   <!-- User NOT logged in -->
   <ng-template #guest>
     <h3>こんにちは！、ゲストさん</h3>
-    <p>続けるにはログインしてください</p>
+    <p>続けるにはログインが必要です</p>
 
     <button class="btn btn-dark" (click)="auth.googleSignin()">
       <i class="fa fa-google"></i> Googleアカウントでログイン
