謎に溜まってた変更点

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <header>
   <h1>
-    <a href="">Evin-Web</a>
+    <a href="">自動板書ノート作成システム</a>
   </h1>
-  <h2>自動板書ノート作製システム</h2>
 </header>
 <router-outlet></router-outlet>
