--- a/src/app/add-lecture-page/add-lecture-list/add-lecture-list.component.html
+++ b/src/app/add-lecture-page/add-lecture-list/add-lecture-list.component.html
@@ -5,3 +5,4 @@
     <button class="btn btn-dark" (click)="onRegBtn(i)" [disabled]="buttonsState[i]">登録</button>
   </div>
 </ng-container>
+<app-redirect-main></app-redirect-main>
