--- a/src/app/mainpage/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage/mainpage.component.html
@@ -6,7 +6,7 @@
 
   <!-- User NOT logged in -->
   <ng-template #guest>
-    <h3>こんにちは！、ゲストさん</h3>
+    <h3>ようこそ、ゲストさん</h3>
     <p>続けるにはログインが必要です</p>
 
     <button class="btn btn-dark" (click)="auth.googleSignin()">
@@ -18,11 +18,9 @@
 
   <!-- User logged in -->
   <ng-template #authenticated>
-    <!-- <div *ngIf="auth.user$ | async as user">
-      <h3>こんにちは！, {{ user.displayName }}さん</h3>
-      <button class="btn btn-dark mt-3" (click)="auth.signOut()">ログアウト</button>
+    <div *ngIf="auth.user$ | async as user">
+      <h3>ようこそ、{{ user.displayName }}さん</h3>
     </div>
-    <button class="btn btn-dark my-4" (click)="toContentButton()">コンテンツページへ遷移</button> -->
 
     <button class="btn btn-dark" (click)="toNote()">ノート表示</button>
     <button class="btn btn-dark" (click)="toAddLecture()">追加</button>
